matchs working in JS, saving matching profiles

--- a/newApplePieJS/applepiehtml.html
+++ b/newApplePieJS/applepiehtml.html
@@ -19,6 +19,10 @@
     <table id="user-data">
         <tr>
           <th>Name</th>
+
+          <th>ID</th>
+
+          <th>Matches</th>
           <th>Picture</th>
           <th>Preferences</th>
         </tr>
@@ -28,5 +32,6 @@
     <br>
 
     <p id="calculate" style="text-align:center">Click here to calculate matches</p>
+
 </body>
 </html>
